@@ -1,3 +1,8 @@
+2011-07-18 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.9
+
+	*pi1:  debugging of orderBy statement by order field (and not path)
+		  included exceptions for Produktmappe BGM and GB
+
 2011-07-08 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.8
 
 	*pi1:  changed call for jquery api at google from http to https
